rename to lizard

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,20 +1,20 @@
 [metadata]
 
 # Application name:
-name=axplus
+name=lizard
 
 # Version number (initial):
 # version=0.1.2
 
 # Application author details:
 author=yijie zeng
-author_email=axplus@163.com
+author_email=lizard@163.com
 
 # Details
-url=http://pypi.python.org/pypi/axplus/
+url=http://pypi.python.org/pypi/lizard/
 
 [options]
-packages=axplus
+packages=lizard
 
 # Include additional files into the package
 include_package_data=true
