--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include README.md
 include LICENSE
-recursive-include axplus/templates *
-recursive-include axplus/static *
+recursive-include lizard/templates *
+recursive-include lizard/static *
 
